Added 'Load From File' button as helper on initial setup. You no longer need to download a param file on initial setup but can apply one you have saved previously

--- a/src/ui/configuration/DownloadRemoteParamsDialog.ui
+++ b/src/ui/configuration/DownloadRemoteParamsDialog.ui
@@ -26,7 +26,7 @@
     <string>Status:</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -42,9 +42,16 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
-       <widget class="QPushButton" name="okButton">
+       <widget class="QPushButton" name="downloadButton">
         <property name="text">
          <string>Download</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="loadButton">
+        <property name="text">
+         <string>Load File</string>
         </property>
        </widget>
       </item>
