Change so graph grouping box shows properly now with a button, and the table view when loading an offline log file allows you to filter by message type with "Show only this"

--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -53,6 +53,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="graphControlsPushButton">
+         <property name="text">
+          <string>Graph Controls</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="autoScrollCheckBox">
          <property name="text">
           <string>Auto Scroll With Data</string>
