--- a/src/ui/map/QGCMapToolBar.ui
+++ b/src/ui/map/QGCMapToolBar.ui
@@ -100,13 +100,13 @@ QPushButton:pressed {
 }</string>
      </property>
      <property name="text">
-      <string>Follow Vehicle</string>
+      <string>Centre on UAV</string>
      </property>
      <property name="checkable">
       <bool>true</bool>
      </property>
      <property name="checked">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
    </item>
