--- a/src/ui/configuration/AdvParameterList.ui
+++ b/src/ui/configuration/AdvParameterList.ui
@@ -133,6 +133,13 @@
           </widget>
          </item>
          <item>
+          <widget class="QPushButton" name="downloadRemoteButton">
+           <property name="text">
+            <string>Download Param Files</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="verticalSpacer_2">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -143,10 +150,17 @@
            <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
-             <height>10</height>
+             <height>25</height>
             </size>
            </property>
           </spacer>
+         </item>
+         <item alignment="Qt::AlignHCenter">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Flight Controller</string>
+           </property>
+          </widget>
          </item>
          <item>
           <widget class="QPushButton" name="refreshPushButton">
@@ -158,7 +172,7 @@
          <item>
           <widget class="QPushButton" name="writePushButton">
            <property name="text">
-            <string>Write</string>
+            <string>Write To</string>
            </property>
           </widget>
          </item>
@@ -200,13 +214,6 @@
             </size>
            </property>
           </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="downloadRemoteButton">
-           <property name="text">
-            <string>Download Param Files</string>
-           </property>
-          </widget>
          </item>
         </layout>
        </item>
