Change 'continue' to 'write param' when load parameters in Initial Setup

--- a/src/ui/configuration/DownloadRemoteParamsDialog.ui
+++ b/src/ui/configuration/DownloadRemoteParamsDialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Download Parameters</string>
   </property>
   <widget class="QLabel" name="statusLabel">
    <property name="geometry">
