Fixed AP2DataPlot mouse-over issues, and changed text to display in a tooltip

--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -67,6 +67,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="showValuesCheckBox">
+         <property name="text">
+          <string>Show Values Under Mouse</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="hideExcelView">
          <property name="text">
           <string>Hide Grid View</string>
