Update Load Param in Initial Config to show blank background

--- a/src/ui/configuration/ApmHardwareConfig.ui
+++ b/src/ui/configuration/ApmHardwareConfig.ui
@@ -126,7 +126,7 @@
           </widget>
          </item>
          <item alignment="Qt::AlignRight">
-          <widget class="QPushButton" name="paramButton">
+          <widget class="QPushButton" name="loadParamButton">
            <property name="minimumSize">
             <size>
              <width>150</width>
