Removed Extra Download Params Progress Bar

--- a/src/ui/configuration/AdvParameterList.ui
+++ b/src/ui/configuration/AdvParameterList.ui
@@ -187,8 +187,17 @@
            <property name="toolTip">
             <string comment="Download Progress"/>
            </property>
+           <property name="minimum">
+            <number>0</number>
+           </property>
+           <property name="maximum">
+            <number>0</number>
+           </property>
            <property name="value">
             <number>0</number>
+           </property>
+           <property name="format">
+            <string>%v/%m</string>
            </property>
           </widget>
          </item>
