--- a/src/ui/configuration/BasicPidConfig.ui
+++ b/src/ui/configuration/BasicPidConfig.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>&lt;h2&gt; Basic Pids&lt;/h2&gt;</string>
+      <string>&lt;h2&gt;Basic Tuning&lt;/h2&gt;</string>
      </property>
     </widget>
    </item>
@@ -31,8 +31,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>1046</width>
-        <height>640</height>
+        <width>1040</width>
+        <height>629</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
