--- a/src/ui/configuration/ApmFirmwareConfig.ui
+++ b/src/ui/configuration/ApmFirmwareConfig.ui
@@ -726,7 +726,7 @@
         <rect>
          <x>30</x>
          <y>360</y>
-         <width>856</width>
+         <width>761</width>
          <height>111</height>
         </rect>
        </property>
@@ -831,7 +831,7 @@
           <item>
            <widget class="QComboBox" name="linkComboBox">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
